@@ -2,6 +2,9 @@
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  27 Mar 2014; Ulrich Müller <ulm@gentoo.org> tablebase-20121127.ebuild:
+  Inherit check-reqs.eclass and check for disk space requirements.
+
 *tablebase-20121127 (27 Mar 2014)
 
   27 Mar 2014; Ulrich Müller <ulm@gentoo.org> +tablebase-20121127.ebuild,
